@@ -30,7 +30,7 @@ information regarding GNUstep resources `http://www.gnustep.org/'
 ==================================================
 
 You can download sources and rpms (for some machines) from
-`ftp://ftp.gnustep.org/pub/gnustep/dev-libs'.
+`ftp://ftp.gnustep.org/pub/gnustep/libs'.
 
 1.5 Where do I send bug reports?
 ================================
