@@ -14,7 +14,7 @@
 
    This library is disibuted in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	 See the GNU
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
    Lesser General Public License for more details.
 
    You should have received a copy of the GNU Lesser General Public
@@ -727,7 +727,7 @@ GSStringEncodingFromUnicode (CFStringEncoding encoding, char *dst,
             {
               char ibuffer[256]; /* Arbitrary buffer size */
               
-              targetLimit = ibuffer + 256;
+              targetLimit = ibuffer + 255;
               do
                 {
                   target = ibuffer;
@@ -773,11 +773,16 @@ GSStringEncodingToUnicode (CFStringEncoding encoding, UniChar *dst,
       
       if (isExternalRepresentation)
         {
+          const char *tmpSrc;
           UniChar bom[1];
           UniChar *bomStart = bom;
           
-          ucnv_toUnicode (ucnv, &bomStart, bomStart + 1, &source, sourceLimit,
-            NULL, false, &err);
+          tmpSrc = source;
+          ucnv_toUnicode (ucnv, &bomStart, bomStart + 1, &tmpSrc, sourceLimit,
+                          NULL, false, &err);
+          if (bom[0] == UTF16_BOM)
+            source = tmpSrc;
+          err = U_ZERO_ERROR;
         }
       
       ucnv_toUnicode (ucnv, &target, targetLimit, &source, sourceLimit, NULL,
@@ -791,7 +796,7 @@ GSStringEncodingToUnicode (CFStringEncoding encoding, UniChar *dst,
             {
               UniChar ibuffer[256]; /* Arbitrary buffer size */
               
-              targetLimit = ibuffer + 256;
+              targetLimit = ibuffer + 255;
               do
                 {
                   target = ibuffer;
