@@ -7,9 +7,10 @@ GCC_VERSION=4.0.0
 # The version number of this release.
 MAJOR_VERSION=0
 MINOR_VERSION=1
+SUBMINOR_VERSION=1
 # numeric value should match above
 VERSION_NUMBER=1
-GNUSTEP_COREBASE_VERSION=${MAJOR_VERSION}.${MINOR_VERSION}
+GNUSTEP_COREBASE_VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${SUBMINOR_VERSION}
 VERSION=${GNUSTEP_COREBASE_VERSION}
 
 GNUSTEP_COREBASE_FTP_MACHINE=ftp.gnustep.org
